refactor: remove Breadcrumb and TreemapPanel components, along with related hooks and styles
- Deleted Breadcrumb component and its associated styles.
- Removed TreemapPanel component, including its logic for rendering the treemap and handling interactions.
- Eliminated useVsCodeApi hook and related VSCode API integration.
- Removed index.css file containing styles for the application.
- Deleted Zustand store implementation and related types for state management.
- Removed utility functions for color handling based on language and file age.
- Added initial configuration files for Mocha testing and architecture decisions documentation.
- Created setup guide for Claude Code and task management documentation.
- Added end-to-end tests for extension activation and UI interactions.

--- a/package.json
+++ b/package.json
@@ -78,12 +78,18 @@
     "test:unit": "vitest run",
     "test:unit:watch": "vitest watch",
     "test:integration": "vscode-test",
+    "test:e2e": "extest setup-and-run './test/e2e/*.test.ts' --mocha_config .mocharc.json",
+    "test:e2e:setup": "extest get-vscode && extest get-chromedriver",
     "test:coverage": "vitest run --coverage",
     "validate": "npm run typecheck && npm run lint && npm run test && npm run package",
     "package": "vsce package --no-dependencies",
     "build": "npm run compile"
   },
   "devDependencies": {
+    "vscode-extension-tester": "^8.0.0",
+    "ts-node": "^10.9.2",
+    "chai": "^4.4.1",
+    "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.x",
     "@types/vscode": "^1.85.0",
