fix: correct webview asset path replacement for Vite output
Vite outputs absolute paths like /assets/index.js with crossorigin attribute,
but the replacement regex was looking for relative paths ./assets/index.js.

Also added activation events for commands (auto-generated by VSCode but
explicit is clearer).

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "visualization",
     "treemap"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:repoStats.showDashboard",
+    "onCommand:repoStats.refreshStats"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
