feat(scc): add auto-download and remove fallback for consistent LOC counting
- Add SccBinaryManager to download scc from GitHub releases when not in PATH
- Remove manual fallback counter (scc-only now for consistency)
- Show scc version/source in Settings UI with gitignore explanation
- Change default excludePatterns to empty (scc respects .gitignore)
- Add SccInfo to AnalysisResult for transparency

--- a/package.json
+++ b/package.json
@@ -39,14 +39,8 @@
       "properties": {
         "repoStats.excludePatterns": {
           "type": "array",
-          "default": [
-            "node_modules",
-            "vendor",
-            ".git",
-            "dist",
-            "build"
-          ],
-          "description": "Glob patterns to exclude from analysis"
+          "default": [],
+          "description": "Additional directories to exclude beyond .gitignore (e.g., for untracked directories)"
         },
         "repoStats.maxCommitsToAnalyze": {
           "type": "number",
