--- a/package.json
+++ b/package.json
@@ -86,6 +86,22 @@
             "**/*-lock.*"
           ],
           "description": "Glob patterns to identify generated files (excluded from 'Largest Files' and marked separately in stats)"
+        },
+        "repoStats.binaryExtensions": {
+          "type": "array",
+          "default": [
+            ".png", ".jpg", ".jpeg", ".gif", ".ico", ".webp", ".bmp", ".tiff", ".tif",
+            ".psd", ".ai", ".eps", ".raw", ".cr2", ".nef", ".heic", ".avif", ".arw", ".dng", ".raf",
+            ".mp4", ".webm", ".mov", ".avi", ".mkv", ".flv", ".wmv", ".m4v", ".mpeg", ".mpg",
+            ".mp3", ".wav", ".ogg", ".flac", ".aac", ".wma", ".m4a", ".opus",
+            ".ttf", ".otf", ".woff", ".woff2", ".eot",
+            ".zip", ".tar", ".gz", ".rar", ".7z", ".bz2", ".xz", ".tgz",
+            ".pyc", ".pyo", ".class", ".o", ".so", ".dll", ".exe", ".bin", ".wasm", ".a", ".lib", ".obj",
+            ".pdf", ".doc", ".docx", ".xls", ".xlsx", ".ppt", ".pptx",
+            ".sqlite", ".db", ".mdb",
+            ".vhdx", ".vmdk", ".iso", ".dmg", ".deb", ".rpm", ".icns"
+          ],
+          "description": "File extensions considered as binary files (images, fonts, compiled, etc.). These have 0 LOC but are shown in treemap Size mode."
         }
       }
     }
