--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Repo Stats",
   "description": "Visualize repository statistics with contributor dashboards, code frequency graphs, and treemap views",
   "version": "0.0.1",
-  "publisher": "your-publisher-name",
+  "publisher": "guwidoe",
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -18,6 +18,14 @@
     "visualization",
     "treemap"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/guwidoe/vscode-repo-stats"
+  },
+  "homepage": "https://github.com/guwidoe/VSCode-repo-stats#readme",
+  "bugs": {
+    "url": "https://github.com/guwidoe/VSCode-repo-stats/issues"
+  },
   "activationEvents": [
     "workspaceContains:.git",
     "onCommand:repoStats.showDashboard",
